base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maven-app-service
spec:
  selector:
    app: maven-app
  ports:
  - port:  80
    targetPort: 8080
